--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
       box-shadow: 0 0 25px rgba(199, 154, 91, 0.6);
     }
 
+    select {
+      padding: 10px 20px;
+      font-size: 1rem;
+      border-radius: 6px;
+      border: none;
+      background-color: #c79a5b;
+      color: #0b0c10;
+      margin-bottom: 20px;
+      font-weight: bold;
+    }
+
     .clock-controls, .board-controls {
       display: flex;
       flex-wrap: wrap;
@@ -124,6 +135,7 @@
       .draft-board {
         grid-template-columns: 1fr;
       }
+
       .spot {
         width: 50px;
         height: 50px;
@@ -136,6 +148,10 @@
 
   <div id="onTheClock">On the Clock: <span id="clockName">---</span></div>
   <div id="clock">10:00</div>
+
+  <select id="managerSelect" onchange="updateClockName(this.value)">
+    <option value="">Select Manager</option>
+  </select>
 
   <div class="clock-controls">
     <button onclick="startTimer()">Start</button>
@@ -159,6 +175,19 @@
     let timer;
     let timeLeft = 600;
 
+    function renderManagerDropdown() {
+      const dropdown = document.getElementById("managerSelect");
+      dropdown.innerHTML = '<option value="">Select Manager</option>';
+      managers.forEach(name => {
+        const alreadyPicked = draftOrder.includes(name);
+        const option = document.createElement("option");
+        option.value = name;
+        option.textContent = name;
+        option.disabled = alreadyPicked;
+        dropdown.appendChild(option);
+      });
+    }
+
     function renderSpots() {
       const container = document.getElementById("spots");
       container.innerHTML = "";
@@ -173,17 +202,26 @@
 
     function assignSpot(i) {
       const name = document.getElementById("clockName").innerText;
-      if (name === "---") return;
-      if (draftOrder.includes(name)) return;
+      if (name === "---" || draftOrder.includes(name)) return;
       draftOrder[i] = name;
+      updateClockName("---");
+      document.getElementById("managerSelect").value = "";
+      renderManagerDropdown();
       renderSpots();
       renderBoard();
+    }
+
+    function updateClockName(name) {
+      document.getElementById("clockName").innerText = name || "---";
     }
 
     function resetBoard() {
       draftOrder.fill("");
       renderSpots();
       renderBoard();
+      updateClockName("---");
+      document.getElementById("managerSelect").value = "";
+      renderManagerDropdown();
     }
 
     function removePickPrompt() {
@@ -193,6 +231,7 @@
         draftOrder[index] = "";
         renderSpots();
         renderBoard();
+        renderManagerDropdown();
       }
     }
 
@@ -208,13 +247,9 @@
     }
 
     function lockDraft() {
-      document.querySelectorAll("button").forEach(btn => {
-        if (!btn.textContent.includes("Reset")) btn.disabled = true;
+      document.querySelectorAll("button, select").forEach(el => {
+        if (!el.textContent?.includes("Reset")) el.disabled = true;
       });
-    }
-
-    function updateClockName(name) {
-      document.getElementById("clockName").innerText = name;
     }
 
     function startTimer() {
@@ -246,6 +281,8 @@
       document.getElementById("clock").innerText = `${minutes}:${seconds}`;
     }
 
+    // Init
+    renderManagerDropdown();
     renderSpots();
     renderBoard();
     displayTime();
