--- a/index.html
+++ b/index.html
@@ -24,18 +24,10 @@
       letter-spacing: 2px;
     }
 
-    .header {
-      width: 100%;
-      max-width: 900px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 20px;
-    }
-
     #onTheClock {
       font-size: 1.75rem;
       color: #fff;
+      margin: 10px 0 5px;
       text-shadow: 0 0 10px #c79a5b;
     }
 
@@ -51,27 +43,49 @@
       box-shadow: 0 0 25px rgba(199, 154, 91, 0.6);
     }
 
-    #managerSelect {
+    select {
       padding: 10px 20px;
       font-size: 1rem;
       border-radius: 6px;
       border: none;
       background-color: #c79a5b;
       color: #0b0c10;
+      margin-bottom: 20px;
       font-weight: bold;
     }
 
-    .spots {
-      display: grid;
-      grid-template-columns: repeat(2, auto);
-      gap: 20px;
-      margin-bottom: 30px;
+    .clock-controls, .board-controls {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 12px;
+      justify-content: center;
+      margin-bottom: 20px;
     }
 
-    .column {
+    button {
+      padding: 10px 22px;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      cursor: pointer;
+      background-color: #c79a5b;
+      color: #0b0c10;
+      font-weight: bold;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.4);
+      transition: all 0.2s ease;
+    }
+
+    button:hover {
+      background-color: #a77a43;
+      transform: translateY(-1px);
+    }
+
+    .spots {
       display: flex;
-      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: center;
       gap: 10px;
+      margin-bottom: 30px;
     }
 
     .spot {
@@ -86,6 +100,12 @@
       border-radius: 50%;
       font-weight: bold;
       cursor: pointer;
+      transition: all 0.2s ease;
+    }
+
+    .spot:hover {
+      background-color: #2d2d2d;
+      transform: scale(1.05);
     }
 
     .spot.filled {
@@ -93,67 +113,179 @@
       color: #0b0c10;
       cursor: default;
     }
+
+    .draft-board {
+      width: 100%;
+      max-width: 700px;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 12px;
+    }
+
+    .pick {
+      background: linear-gradient(90deg, #1f1f1f, #2d2d2d);
+      border-left: 6px solid #c79a5b;
+      padding: 14px;
+      font-size: 1rem;
+      border-radius: 6px;
+      box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    }
+
+    @media (max-width: 600px) {
+      .draft-board {
+        grid-template-columns: 1fr;
+      }
+
+      .spot {
+        width: 50px;
+        height: 50px;
+      }
+    }
   </style>
 </head>
 <body>
   <h1>BSUC Draft Lottery</h1>
 
-  <div class="header">
-    <div id="onTheClock">On the Clock: <span id="clockName">---</span></div>
-    <select id="managerSelect" onchange="updateClockName(this.value)">
-      <option value="">Selection in Progress...</option>
-    </select>
-  </div>
-
+  <div id="onTheClock">On the Clock: <span id="clockName">---</span></div>
   <div id="clock">10:00</div>
 
-  <div class="spots">
-    <div class="column" id="leftColumn"></div>
-    <div class="column" id="rightColumn"></div>
+  <select id="managerSelect" onchange="updateClockName(this.value)">
+    <option value="">Select Manager</option>
+  </select>
+
+  <div class="clock-controls">
+    <button onclick="startTimer()">Start</button>
+    <button onclick="stopTimer()">Stop</button>
+    <button onclick="resetTimer()">Reset</button>
   </div>
+
+  <div class="spots" id="spots"></div>
+
+  <div class="board-controls">
+    <button onclick="resetBoard()">Reset Board</button>
+    <button onclick="removePickPrompt()">Remove Pick</button>
+    <button onclick="lockDraft()">Lock Picks</button>
+  </div>
+
+  <div class="draft-board" id="draftBoard"></div>
 
   <script>
     const managers = ["Justin", "Ryan", "Jared", "Fyola", "Alex K", "Alex G", "Jimmy", "Evan", "Timmy", "Jonathan", "Kyle", "Seth"];
     let draftOrder = Array(12).fill("");
+    let timer;
+    let timeLeft = 600;
+
+    function renderManagerDropdown() {
+      const dropdown = document.getElementById("managerSelect");
+      dropdown.innerHTML = '<option value="">Select Manager</option>';
+      managers.forEach(name => {
+        const alreadyPicked = draftOrder.includes(name);
+        const option = document.createElement("option");
+        option.value = name;
+        option.textContent = name;
+        option.disabled = alreadyPicked;
+        dropdown.appendChild(option);
+      });
+    }
+
+    function renderSpots() {
+      const container = document.getElementById("spots");
+      container.innerHTML = "";
+      draftOrder.forEach((name, i) => {
+        const div = document.createElement("div");
+        div.className = `spot ${name ? 'filled' : ''}`;
+        div.innerText = i + 1;
+        if (!name) div.onclick = () => assignSpot(i);
+        container.appendChild(div);
+      });
+    }
+
+    function assignSpot(i) {
+      const name = document.getElementById("clockName").innerText;
+      if (name === "---" || draftOrder.includes(name)) return;
+      draftOrder[i] = name;
+      updateClockName("---");
+      document.getElementById("managerSelect").value = "";
+      renderManagerDropdown();
+      renderSpots();
+      renderBoard();
+    }
 
     function updateClockName(name) {
       document.getElementById("clockName").innerText = name || "---";
     }
 
-    function renderManagerDropdown() {
-      const dropdown = document.getElementById("managerSelect");
-      dropdown.innerHTML = '<option value="">Selection in Progress...</option>';
-      managers.forEach(name => {
-        if (!draftOrder.includes(name)) {
-          const option = document.createElement("option");
-          option.value = name;
-          option.textContent = name;
-          dropdown.appendChild(option);
-        }
-      });
+    function resetBoard() {
+      draftOrder.fill("");
+      renderSpots();
+      renderBoard();
+      updateClockName("---");
+      document.getElementById("managerSelect").value = "";
+      renderManagerDropdown();
     }
 
-    function renderSpots() {
-      const left = document.getElementById("leftColumn");
-      const right = document.getElementById("rightColumn");
-      left.innerHTML = "";
-      right.innerHTML = "";
-
-      for (let i = 0; i < 6; i++) {
-        left.appendChild(createSpot(i));
-        right.appendChild(createSpot(i + 6));
+    function removePickPrompt() {
+      const spot = prompt("Enter pick # to clear:");
+      const index = parseInt(spot) - 1;
+      if (index >= 0 && index < 12) {
+        draftOrder[index] = "";
+        renderSpots();
+        renderBoard();
+        renderManagerDropdown();
       }
     }
 
-    function createSpot(index) {
-      const div = document.createElement("div");
-      div.className = `spot ${draftOrder[index] ? 'filled' : ''}`;
-      div.innerText = index + 1;
-      return div;
+    function renderBoard() {
+      const board = document.getElementById("draftBoard");
+      board.innerHTML = "";
+      draftOrder.forEach((name, i) => {
+        const div = document.createElement("div");
+        div.className = "pick";
+        div.innerText = `${i + 1}. ${name || "---"}`;
+        board.appendChild(div);
+      });
     }
 
+    function lockDraft() {
+      document.querySelectorAll("button, select").forEach(el => {
+        if (!el.textContent?.includes("Reset")) el.disabled = true;
+      });
+    }
+
+    function startTimer() {
+      clearInterval(timer);
+      timer = setInterval(() => {
+        if (timeLeft <= 0) {
+          stopTimer();
+          alert("Time's up!");
+        } else {
+          timeLeft--;
+          displayTime();
+        }
+      }, 1000);
+    }
+
+    function stopTimer() {
+      clearInterval(timer);
+    }
+
+    function resetTimer() {
+      stopTimer();
+      timeLeft = 600;
+      displayTime();
+    }
+
+    function displayTime() {
+      const minutes = Math.floor(timeLeft / 60).toString().padStart(2, "0");
+      const seconds = (timeLeft % 60).toString().padStart(2, "0");
+      document.getElementById("clock").innerText = `${minutes}:${seconds}`;
+    }
+
+    // Init
     renderManagerDropdown();
     renderSpots();
+    renderBoard();
+    displayTime();
   </script>
 </body>
 </html>
