--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BSUC Draft Lottery</title>
+  <title>2025 BSUC Draft Lottery</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -170,7 +170,7 @@
   <div class="draft-board" id="draftBoard"></div>
 
   <script>
-    const managers = ["Justin", "Ryan", "Jared", "Fyola", "Alex K", "Alex G", "Jimmy", "Evan", "Timmy", "Jonathan", "Kyle", "Seth"];
+    const managers = ["Selection in Progress...","Justin", "Ryan", "Jared", "Fyola", "Alex K", "Alex G", "Jimmy", "Evan", "Timmy", "Jonathan", "Kyle", "Seth"];
     let draftOrder = Array(12).fill("");
     let timer;
     let timeLeft = 600;
