--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>2025 BSUC Draft Lottery</title>
   <style>
     body {
@@ -24,11 +24,41 @@
       letter-spacing: 2px;
     }
 
+    #headerContainer {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 900px;
+    }
+
     #onTheClock {
       font-size: 1.75rem;
       color: #fff;
-      margin: 10px 0 5px;
       text-shadow: 0 0 10px #c79a5b;
+    }
+
+    #managerDropdownContainer {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      gap: 5px;
+    }
+
+    #managerDropdownContainer label {
+      font-size: 0.9rem;
+      color: #c79a5b;
+      font-weight: bold;
+    }
+
+    #managerSelect {
+      padding: 10px 20px;
+      font-size: 1rem;
+      border-radius: 6px;
+      border: none;
+      background-color: #c79a5b;
+      color: #0b0c10;
+      font-weight: bold;
     }
 
     #clock {
@@ -38,20 +68,9 @@
       border: 3px solid #c79a5b;
       border-radius: 12px;
       padding: 10px 30px;
-      margin: 0 0 20px;
+      margin: 20px 0;
       text-align: center;
       box-shadow: 0 0 25px rgba(199, 154, 91, 0.6);
-    }
-
-    select {
-      padding: 10px 20px;
-      font-size: 1rem;
-      border-radius: 6px;
-      border: none;
-      background-color: #c79a5b;
-      color: #0b0c10;
-      margin-bottom: 20px;
-      font-weight: bold;
     }
 
     .clock-controls, .board-controls {
@@ -140,18 +159,34 @@
         width: 50px;
         height: 50px;
       }
+
+      #headerContainer {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      #managerDropdownContainer {
+        align-items: center;
+        margin-top: 10px;
+      }
     }
   </style>
 </head>
 <body>
+
   <h1>BSUC Draft Lottery</h1>
 
-  <div id="onTheClock">On the Clock: <span id="clockName">---</span></div>
-  <div id="clock">10:00</div>
+  <div id="headerContainer">
+    <div id="onTheClock">On the Clock: <span id="clockName">---</span></div>
+    <div id="managerDropdownContainer">
+      <label for="managerSelect">Manager:</label>
+      <select id="managerSelect" onchange="updateClockName(this.value)">
+        <option value="">Select Manager</option>
+      </select>
+    </div>
+  </div>
 
-  <select id="managerSelect" onchange="updateClockName(this.value)">
-    <option value="">Select Manager</option>
-  </select>
+  <div id="clock">10:00</div>
 
   <div class="clock-controls">
     <button onclick="startTimer()">Start</button>
@@ -170,7 +205,7 @@
   <div class="draft-board" id="draftBoard"></div>
 
   <script>
-    const managers = ["Selection in Progress...","Justin", "Ryan", "Jared", "Fyola", "Alex K", "Alex G", "Jimmy", "Evan", "Timmy", "Jonathan", "Kyle", "Seth"];
+    const managers = ["Selection in Progress...", "Justin", "Ryan", "Jared", "Fyola", "Alex K", "Alex G", "Jimmy", "Evan", "Timmy", "Jonathan", "Kyle", "Seth"];
     let draftOrder = Array(12).fill("");
     let timer;
     let timeLeft = 600;
